P1: fixed div spacing and added link to found code

--- a/Projects/Project01/css/style.css
+++ b/Projects/Project01/css/style.css
@@ -29,10 +29,10 @@ margin-bottom: 50px;
 
 .inspiration{
 
-  margin-left: 450px;
+  margin-left: 50px;
   margin-top: 50px;
   font-weight: bold;
   font-size: 50px;
-  
+
 
 }
